--- a/index14.html
+++ b/index14.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div class="wrap">
-    <input class="number1">
-    <input class="number2">
+    <input id="number1">
+    <input id="number2">
     <div class="calculator">
       <button class="button" id="plus" onclick="ButtonClick()">+</button>
       <button class="button" id="minus" onclick="ButtonClick2()">-</button>
       <button class="button" id="multi" onclick="ButtonClick3()">*</button>
       <button class="button" id="divide" onclick="ButtonClick4()">/</button>
     </div>
-    <div class="result"></div>
+    <div id="result"></div>
 </div>
     <script src="js14.js"></script>
     </body>
