--- a/index14.html
+++ b/index14.html
@@ -11,13 +11,13 @@
     <div class="wrap">
     <input id="number1">
     <input id="number2">
-    <div class="calculator">
+    <div class="calculator" onclick="changeColor()">
       <button class="button" id="plus" onclick="ButtonClick()">+</button>
       <button class="button" id="minus" onclick="ButtonClick2()">-</button>
       <button class="button" id="multi" onclick="ButtonClick3()">*</button>
       <button class="button" id="divide" onclick="ButtonClick4()">/</button>
     </div>
-    <div id="result"></div>
+    <div id="result" onclick="changeColor()"></div>
 </div>
     <script src="js14.js"></script>
     </body>
