--- a/index14.html
+++ b/index14.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="wrap">
+    <div class="wrap" onclick="changeColor()">
     <input id="number1">
     <input id="number2">
     <div class="calculator" onclick="changeColor()">
