--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>gallary</title>
     <link rel="stylesheet" href="/gallary/style.css" />
   </head>
   <body>
     <div class="wrap">
     
-    <div class="gallary" onclick="changeColor()">
-        <div>
-            <img src="images/img_02.jpg" alt="">
-        </div>
-        <div>
-            <img src="images/img_03.jpg" alt="">
-        </div>
-        <div>
-            <img src="images/img_04.jpg" alt="">
-        </div>
+        <div class="container">
+            <div><img class="active" src="img/item1.jpg" alt="fores1/jpg"></div>
+            <div><img src="img/item2.jpeg" alt="fores2/jpeg"></div>
+            <div><img src="img/item3.jpg" alt="fores3/jpg"></div>
+            <div><img src="img/item4.jpg" alt="fores4/jpg"></div>
+            <div><img src="img/item5.jpeg" alt="fores5/jpeg"></div>
+            <div><img src="img/item6.jpg" alt="fores5/jpg"></div>
+          </div>
     </div>
-    
-</div>
+    <div class="slider-right"><img src="img/right.svg" alt="right/svg"></div>
+    <div class="slider-left"><img src="img/left.svg" alt="left/svg"></div>
+
     <script src="/gallary/gallary.js"></script>
     </body>
 </html>
+
+
