--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <div><img id="mySlides" src="img/item1.jpg" alt="fores1/jpg" /></div>
+      <div><img id="myImages" src="img/item1.jpg" alt="fores1/jpg" /></div>
 
       <a class="slider-right" onClick="imgsrc();">❯</a>
-      <a class="slider-left" onClick="imgsrc2();">❮</a>
+      <a class="slider-left" onClick="imgsrc();">❮</a>
     </div>
     <script src="/gallary/gallary.js"></script>
   </body>
