--- a/gallary/gallary.html
+++ b/gallary/gallary.html
@@ -12,7 +12,7 @@
       <div><img id="myImages" src="img/item1.jpg" alt="fores1/jpg" /></div>
 
       <a class="slider-right" onClick="imgsrc();">❯</a>
-      <a class="slider-left" onClick="imgsrc();">❮</a>
+      <a class="slider-left" onClick="imgsrc2();">❮</a>
     </div>
     <script src="/gallary/gallary.js"></script>
   </body>
